---------------------------------------------------------------------------------------------------
Version: 1.0.0
Date: 12.13.2023
  Features:
    - Wood Bolts Magazine