@@ -1,0 +1,40 @@
+[item-name]
+wood-darts-magazine=Wooden darts magazine
+wood-shotgun-shell=Wooden shotgun shells
+wood-bolts-magazine=Wooden bolts magazine
+
+[mod-setting-name]
+wood-military-smg-ammo=Submachine gun ammo
+wood-military-shotgun-ammo=Shotgun ammo
+wood-military-sniper-ammo=Sniper rifle ammo
+wood-military-ammo-cost=Ammo wood cost
+wood-military-damage-buff=Buff post-wood damage
+
+[mod-setting-description]
+wood-military-smg-ammo=Whether to make Pistol/SMG magazines cost wood
+wood-military-shotgun-ammo=Whether to make Shotgun shells cost wood
+wood-military-sniper-ammo=Whether to make Sniper rifle magazines cost wood
+wood-military-ammo-cost=How much wood should a wood ammo cost if a wood ammo could cost wood?
+wood-military-damage-buff=Whether to slightly buff vanilla ammo damage (up through Piercing rounds), as a reward for your suffering. Only applies when "Add item" is selected
+
+[string-mod-setting]
+wood-military-smg-ammo-item=Add item
+wood-military-smg-ammo-recipe=Recipe only
+wood-military-smg-ammo-no=Unchanged
+wood-military-shotgun-ammo-item=Add item
+wood-military-shotgun-ammo-recipe=Recipe only
+wood-military-shotgun-ammo-no=Unchanged
+wood-military-sniper-ammo-item=Add item
+wood-military-sniper-ammo-recipe=Recipe only
+wood-military-sniper-ammo-no=Unchanged
+
+[string-mod-setting-description]
+wood-military-smg-ammo-item=Add the Wooden darts magazine item, and change Firearm magazine to require Military 1
+wood-military-smg-ammo-recipe=Add wood to Firearm magazine recipe
+wood-military-smg-ammo-no=Don't change anything for Pistol/SMG ammo
+wood-military-shotgun-ammo-item=Add the Wooden shotgun shells item, and change Shotgun shells to require Military 2
+wood-military-shotgun-ammo-recipe=Add wood to Shotgun shells recipe
+wood-military-shotgun-ammo-no=Don't change anything for Shotgun ammo
+wood-military-sniper-ammo-item=Add the Wooden darts magazine item (Recipe cost is 2x Wood + 1 Iron stick), and change Carbine rifle to only require Military 1
+wood-military-sniper-ammo-recipe=Add wood to Rifle magazine recipe
+wood-military-sniper-ammo-no=Don't change anything for Sniper rifle ammo
